<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="305dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_launcher_background"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/userName"
                    android:text="@string/Text_edit_profile_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fresco_simple_drawe_view_height"
                android:contentDescription="@string/fresco_simple_drawe_view_esc"
                fresco:placeholderImage="@drawable/ic_image_placeholder" />

            <TextView
                android:id="@+id/pet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/pet_city"
                android:text="@string/pet_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/pet_date"
                android:text="@string/pet_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:orientation="horizontal"
                tools:context=".fragments.homeFragment">

                <Button
                    android:id="@+id/likes"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_favorite_border_black_24dp"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:id="@+id/share"
                    android:layout_width="31dp"
                    android:layout_height="28dp"
                    android:background="@drawable/ic_share_black_24dp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>