<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.RestorePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:elevation="@dimen/toolbar_elevation"
        android:background="@color/colorPrimaryMedium">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_linear_layout_height"
                android:weightSum="1"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/imageLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/image_linear_layout_padding_top">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/circleImage"
                        android:background="@color/colorPrimaryMedium"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/circle_image_layout_height"
                        android:layout_gravity="center"
                        fresco:roundAsCircle="true"
                        fresco:placeholderImage="@drawable/ic_image_key"
                        fresco:roundWithOverlayColor="@color/colorPrimary"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/textLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageLayout"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/text_layout_padding_top">

                    <TextView
                        android:id="@+id/topTittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/topTittle"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/restore_password_textview_text_size"
                        android:textStyle="bold"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttomLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_below="@+id/topLinearLayout">

                <TextView
                    android:id="@+id/emailTittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/emailTittle"
                    android:gravity="left"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/email_tittle_text_size"
                    android:textStyle="normal"
                    android:paddingTop="@dimen/email_tittle_padding_top"
                    android:paddingLeft="@dimen/email_tittle_padding_left"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_restore_password_text_input_layout_margin"
                    android:theme="@style/TextLabel"
                    android:paddingLeft="@dimen/text_input_padding_left"
                    android:paddingRight="@dimen/text_input_padding_rigth">

                    <EditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/restore_password_edit_text_size"
                        android:background="@drawable/input_styles"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/send_email_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/send_email_button_height"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/send_email_button_margin_bottom"
                    android:layout_marginTop="@dimen/send_email_button_margin_top"
                    android:background="@drawable/login_button_styles"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="@dimen/send_email_button_text_size" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>